rpc/server.log
   Compiling suitokengentest v0.1.0 (/home/ubuntu/repos/sui-token-gen-test)
warning: unused imports: `env`, `fs`, and `path::Path`
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/command_tests.rs:1:11
  |
1 | use std::{env, fs, path::Path};
  |           ^^^  ^^  ^^^^^^^^^^
  |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:1:1
  |
1 | pub mod command_tests;
  | ^^^^^^^^^^^^^^^^^^^^^^
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tarpc::context`
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/command_tests.rs:2:5
  |
2 | use tarpc::context;
  |     ^^^^^^^^^^^^^^
  |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:1:1
  |
1 | pub mod command_tests;
  | ^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `SUB_FOLDER`, `commands::verify::verify_token_using_url`, `create_base_folder`, `create_contract_file`, `create_move_toml`, and `helpers::sanitize_name`
  --> /home/ubuntu/repos/sui-token-gen-test/src/tests/command_tests.rs:5:5
   |
5  |     commands::verify::verify_token_using_url,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
9  |         generation::{create_base_folder, create_contract_file, create_move_toml},
   |                      ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^
10 |         helpers::sanitize_name,
   |         ^^^^^^^^^^^^^^^^^^^^^^
11 |     },
12 |     variables::{ADDRESS, SUB_FOLDER},
   |                          ^^^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:1:1
   |
1  | pub mod command_tests;
   | ^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `commands::verify::verify_token_using_url` and `variables::ADDRESS`
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/other_tests.rs:2:5
  |
2 |     commands::verify::verify_token_using_url,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
5 |     variables::ADDRESS,
  |     ^^^^^^^^^^^^^^^^^^
  |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:2:1
  |
2 | pub mod other_tests;
  | ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tarpc::context`
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/other_tests.rs:7:5
  |
7 | use tarpc::context;
  |     ^^^^^^^^^^^^^^
  |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:2:1
  |
2 | pub mod other_tests;
  | ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `variables::ADDRESS`
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/rpc_connection_tests.rs:4:5
  |
4 |     variables::ADDRESS,
  |     ^^^^^^^^^^^^^^^^^^
  |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:3:1
  |
3 | pub mod rpc_connection_tests;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tarpc::context`
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/rpc_connection_tests.rs:7:5
  |
7 | use tarpc::context;
  |     ^^^^^^^^^^^^^^
  |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:3:1
  |
3 | pub mod rpc_connection_tests;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `SuccessType`, `handle_success`, and `utils::prompts::TokenInfo`
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/success_handler_tests.rs:2:23
  |
2 |     success_handler::{SuccessType, handle_success},
  |                       ^^^^^^^^^^^  ^^^^^^^^^^^^^^
3 |     utils::prompts::TokenInfo,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
 --> /home/ubuntu/repos/sui-token-gen-test/src/tests/mod.rs:4:1
  |
4 | pub mod success_handler_tests;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `std::io::Error: std::default::Default` is not satisfied
 --> /home/ubuntu/repos/sui-token-gen-test/src/errors.rs:7:35
  |
7 | #[derive(Debug, Error, Serialize, Deserialize)]
  |                                   ^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `std::io::Error`
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: `suitokengentest` (lib) generated 8 warnings
error: could not compile `suitokengentest` (lib) due to 1 previous error; 8 warnings emitted
